<resources>
    <string name="app_name">Lugares</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="msg_correo">Campo para ingresar su correo</string>
    <string name="msg_clave">Campo para ingresar su contraseña</string>
    <string name="msg_btLogin">Boton para hacer login al App</string>
    <string name="msg_btRegister">Boton para registrarse en el App</string>
    <string name="msg_fallo_registro">Falló el registro del usuario</string>
    <string name="msg_fallo_login">Falló el login del usuario</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_lugar">Lugares</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_nombre_add">Nombre del lugar</string>
    <string name="msg_correo_add">Correo del lugar</string>
    <string name="msg_telefono_add">Teléfono del lugar</string>
    <string name="msg_web_add">Sitio WEB del lugar</string>
    <string name="msg_lugar_add">Lugar agregado</string>
    <string name="msg_lugar_update">Lugar actualizado</string>
    <string name="msg_lugar_delete">Lugar eliminado</string>

    <string name="bt_add_lugar">Agregar Lugar</string>
    <string name="bt_update_lugar">Actualizar Lugar</string>
    <string name="menu_delete">Eliminar Lugar</string>
    <string name="msg_seguroBorrar">"¿Está seguro de eliminar "</string>
    <string name="no">No</string>
    <string name="si">Si</string>

    <string name="msg_enviar_correo">Enviar correo electrónico</string>
    <string name="msg_phone_call">Realizar llamada telefónica</string>
    <string name="msg_whatsapp_send">Enviar mensaje WhatsApp</string>
    <string name="msg_web_view">Abrir sitio Web</string>
    <string name="msg_map_view">Ver lugar en mapa</string>
    <string name="tv_latitud_lb">Latitud</string>
    <string name="tv_longitud_lb">Longitud</string>
    <string name="tv_altura_lb">Altura</string>
    <string name="msg_saludos">Saludos amigos</string>
    <string name="msg_mensaje_correo">Le escribo este correo para</string>
    <string name="msg_datos">Faltan datos</string>
    <string name="msg_firebase_add">Lugar agregado</string>
    <string name="msg_firebase_update">Lugar modificado</string>
    <string name="msg_firebase_delete">Lugar eliminado</string>
    <string name="msg_firebase_no_add">ERROR: Lugar no agregado</string>
    <string name="msg_firebase_no_update">ERROR: Lugar no actualizado</string>
    <string name="msg_firebase_no_delete">ERROR: Lugar no eliminado</string>
    <string name="error">Error</string>

    <string name="msgEscucharAudio">Escuchar nota de audio</string>
    <string name="msg_imagen">Imagen del lugar</string>
    <string name="graba_pausa">Graba o pausa grabación</string>
    <string name="escuchaPlay">Escucha grabación</string>
    <string name="delete_nota">Borra nota de audio</string>
    <string name="play_nota">Escuchar nota de audio</string>
    <string name="rec_stop_nota">Graba o detiene nota de audio</string>
    <string name="take_photo">Toma foto</string>
    <string name="rotate_l">Rota izquierda</string>
    <string name="rotale_r">Rota a la derecha</string>
    <string name="msg_graba_audio">Grabando nota de audio</string>
    <string name="msg_detener_audio">Nota de audio detenida</string>
    <string name="msg_subiendo_audio">Subiendo Nota Audio</string>
    <string name="msg_subiendo_imagen">Subiendo imagen</string>
    <string name="todo">To Do</string>


</resources>